--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -589,7 +589,7 @@
                                     incorporate a unique service provider who is a web development company in USA.
                                 </p>
                                 <p>Affordable professional web design company is what <a href="/"
-                                        style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a>
+                                        style="font-weight: bold; color: #FE0094;">Digital Minds On</a>
                                     boasts of, making
                                     it among the best web development companies in USA for custom web developing
                                     services. Whether it’s a distinct customized or a progressive Website Design, we
@@ -600,7 +600,7 @@
                                 <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                     <h2>Why You Should Hire a Professional Web Development Company</h2>
                                 </div>
-                                <p>Deciding on a proper <a href="web-development-services" target="_blank"
+                                <p>Deciding on a proper <a href="web-development-services"
                                         style="color: #fe0094; font-weight: bold;">web development</a> agency can have a
                                     massive effect on the result
                                     of the business. An effective website is one where the customer gets the first
@@ -738,7 +738,7 @@
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Web development is a dynamic field as the development of AI, machine learning and
                                 progressive web apps are the future of this field. Being one of the progressive web
-                                development company in USA <a href="/" target="_blank"
+                                development company in USA <a href="/" 
                                     style="font-weight: bold; color: #fe0094;"> Digital Minds On</a> always looks
                                 forward to implementing these
                                 trends in our works.</p>
