--- a/What-is-application-development-a-detailed-guide-to-2025.html
+++ b/What-is-application-development-a-detailed-guide-to-2025.html
@@ -588,7 +588,7 @@
                                     field, Digital Minds On offers a spectrum of development services to serve different
                                     business requirements. Come with me, we will discuss different types of application
                                     development services, their advantages and how <a href="/"
-                                        style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a>
+                                        style="font-weight: bold; color: #FE0094;">Digital Minds On</a>
                                     helps businesses
                                     reach their objectives through latest technologies.</p>
                             </div>
@@ -611,7 +611,7 @@
                                     With businesses trying to establish a direct connection with users by means of their
                                     smartphones or tablets, mobile applications have become an integral part of them.
                                     The demand for ‘custom <a href="mobile-app-development-services"
-                                        style="font-weight: bold; color: #FE0094;" target="_blank">mobile app
+                                        style="font-weight: bold; color: #FE0094;">mobile app
                                         development services</a> has increased massively due
                                     to the rise of smartphone.
                                 </p>
@@ -726,7 +726,7 @@
                             <p> Application development is a big, big world. Businesses have the options to operate
                                 better, engage customers and achieve goals by focusing in on categories such as, desktop
                                 application development services and web application development services.</p>
-                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds
+                            <p><a href="/" style="font-weight: bold; color: #FE0094;">Digital Minds
                                     On</a> is committed to offering the best professional services that are
                                 tailored to meet the needs of our diverse clients. By joining us, you open doors to
                                 cutting edge technology that continues to drive success. Contact Digital Minds On see
