--- a/web-development-solution.html
+++ b/web-development-solution.html
@@ -331,7 +331,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="/" target="_blank">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li> Blog Details</li>
                                 </ul>
@@ -588,8 +588,8 @@
                                     good user friendly website design is visually appealing. Our expert front end
                                     developers work on building responsive designs in the manner of a fluid experience
                                     across all of devices. If you are you looking for a <a
-                                        href="wordpress-development-services" style="font-weight: bold; color: #FE0094;"
-                                        target="_blank">WordPress website designer</a> or a
+                                        href="wordpress-development-services"
+                                        style="font-weight: bold; color: #FE0094;">WordPress website designer</a> or a
                                     Shopify web designer or anything of the sort, we provide you with the most intuitive
                                     interfaces in tandem with your brand identity and intuitive user interaction.
                                 </p>
@@ -599,8 +599,8 @@
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>A <a href="web-development-services" style="font-weight: bold; color: #FE0094;"
-                                        target="_blank">web application development</a> is one of our specialties so you
+                                <p>A <a href="web-development-services" style="font-weight: bold; color: #FE0094;">web
+                                        application development</a> is one of our specialties so you
                                     are sure of fast,
                                     secured and scalable platforms for your businesses. We have a fullstack developers
                                     who will turn your things into an amazing web application and everytime with latest
@@ -683,8 +683,8 @@
                             <h4>UI/UX Design Focused on User Engagement and Conversions</h4>
                         </div>
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>A well structured <a href="ui-ux-design" style="font-weight: bold; color: #FE0094;"
-                                    target="_blank">UI/UX design</a> is a key to getting maximum user engagement. We are
+                            <p>A well structured <a href="ui-ux-design" style="font-weight: bold; color: #FE0094;">UI/UX
+                                    design</a> is a key to getting maximum user engagement. We are
                                 a team
                                 of expert designers and the best web developers that have a nutshell of intuitive
                                 interface that enables better user experience as well as increased conversion rates. We
@@ -712,7 +712,7 @@
                             <p>Digital Minds On is dedicated to providing professional web development solutions that
                                 help your business grow. Whether your search is for custom website design cost, website
                                 design services, or a professional website designing company, <a href="/"
-                                    style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> is
+                                    style="font-weight: bold; color: #FE0094;">Digital Minds On</a> is
                                 here.
                                 Get affordable website development services partnering with Digital Minds On.</p>
                         </div>
