--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -587,7 +587,7 @@
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p><b><a href="mobile-app-development-services"
                                             style="color: var(--primaryColor); font-weight: bold;"
-                                            target="_blank">Mobile application
+                                            >Mobile application
                                             development</a></b>
                                     is the process of designing,
                                     developing and
@@ -640,7 +640,7 @@
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><a href="ui-ux-design" style="font-weight: bold; color: #FE0094;" target="_blank">UI
+                                <p><a href="ui-ux-design" style="font-weight: bold; color: #FE0094;">UI
                                         design</a> entails the graphical and the actual arrangement of the card that is
                                     used
                                     in developing the app and one that has to incite the visibility of the brand. This
@@ -747,7 +747,7 @@
                         </div>
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Ensuring people like to spend their time using an app is crucial for its success so
-                                <a href="ui-ux-design" target="_blank"
+                                <a href="ui-ux-design"
                                     style="font-weight: bold; color: var(--primaryColor);">UX design</a> deals with the
                                 development of a pleasant and manageable application
                                 interface for the specified audience.
