--- a/what-is-wordpress-development.html
+++ b/what-is-wordpress-development.html
@@ -587,7 +587,7 @@
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>When it comes to having an online presence, it’s hard to argue with the fact that for
                                     them WordPress would be the best choice. <a href="/"
-                                        style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a>
+                                        style="font-weight: bold; color: #FE0094;">Digital Minds On</a>
                                     being a professional
                                     WordPress development company provides the best WordPress development services for
                                     your website and enhance the user experience. If you require a straightforward blog
@@ -655,7 +655,7 @@
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p> Another distinctive feature of WordPress is its <a href="seo-services"
-                                        style="font-weight: bold; color: #FE0094;" target="_blank">SEO</a>. We are a
+                                        style="font-weight: bold; color: #FE0094;">SEO</a>. We are a
                                     WordPress web
                                     development company and we always make any of our developments Search Engine
                                     friendly from scratch. This will mean that your website is not only attractive and
@@ -743,10 +743,9 @@
                             <h2>Conclusion</h2>
                             <p>When you are going to revamp your old existing site and if you want to build a new one
                                 then the selection of a WordPress development company to do so becomes vital as to the
-                                success of your website. <a href="/" style="font-weight: bold; color: #FE0094;"
-                                    target="_blank">Digital Minds On</a> provides expert <a
-                                    href="wordpress-development-services" style="font-weight: bold; color: #FE0094;"
-                                    target="_blank">WordPress development
+                                success of your website. <a href="/" style="font-weight: bold; color: #FE0094;">Digital
+                                    Minds On</a> provides expert <a href="wordpress-development-services"
+                                    style="font-weight: bold; color: #FE0094;">WordPress development
                                     services,</a> and we guarantee you that your website will be created according to
                                 your own
                                 individual needs, giving you the best user experience and best SEO performance. Being a
