--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -610,7 +610,7 @@
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>
                                     Web Scripting is a subset of <a href="web-development-services"
-                                        style="font-weight: bold; color: #FE0094;" target="_blank">Web development</a>
+                                        style="font-weight: bold; color: #FE0094;">Web development</a>
                                     which primarily involves writing
                                     scripts to develop websites or web applications. It includes frontend programming
                                     the part of the website that one can see and interact with, backend programming,
@@ -736,7 +736,7 @@
                                 The advancement of the web programming remains important for developers and business
                                 because it can shape the way new websites and application is built for the current
                                 and upcoming user experience. <a href="/" style="font-weight: bold; color: #FE0094;"
-                                    target="_blank">Digital Minds On </a> tries to follow those trends and
+                                >Digital Minds On </a> tries to follow those trends and
                                 provide our clients with the most progressive web development services.</p>
                         </div>
 
