--- a/blog.html
+++ b/blog.html
@@ -563,7 +563,7 @@
                                         <p class="bg__white"><span class="text__gradient">08 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="what-is-mobile-application-development" target="_blank">What is
+                                        <h6><a href="what-is-mobile-application-development">What is
                                                 Mobile App
                                                 Development</a></h6>
                                     </div>
@@ -573,7 +573,7 @@
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button" href="what-is-mobile-application-development"
-                                            target="_blank">READ
+                                            >READ
                                             MORE</a>
                                     </div>
                                 </div>
@@ -589,7 +589,7 @@
                                         <p class="bg__white"><span class="text__gradient">10 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="what-is-software-development" target="_blank">Whats is Software
+                                        <h6><a href="what-is-software-development">Whats is Software
                                                 Development</a>
                                         </h6>
                                     </div>
@@ -599,7 +599,7 @@
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button" href="what-is-software-development"
-                                            target="_blank">READ MORE</a>
+                                            >READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -614,7 +614,7 @@
                                         <p class="bg__white"><span class="text__gradient">11 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="what-is-web-development" target="_blank">What is Web
+                                        <h6><a href="what-is-web-development">What is Web
                                                 Development</a></h6>
                                     </div>
                                     <div class="blog__4__text">
@@ -622,7 +622,7 @@
                                             websites.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="what-is-web-development" target="_blank">READ
+                                        <a class="default__button" href="what-is-web-development">READ
                                             MORE</a>
                                     </div>
                                 </div>
@@ -638,7 +638,7 @@
                                         <p class="bg__white"><span class="text__gradient">04 January, 2025</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="what-is-wordpress-development" target="_blank">What is Wordpress
+                                        <h6><a href="what-is-wordpress-development">What is Wordpress
                                                 Development</a></h6>
                                     </div>
                                     <div class="blog__4__text">
@@ -647,7 +647,7 @@
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button" href="what-is-wordpress-development"
-                                            target="_blank">READ MORE</a>
+                                            >READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -663,7 +663,7 @@
                                     </div>
                                     <div class="blog__4__heading">
                                         <h6><a href="what-is-software-development-a-comprehensive-guide"
-                                                target="_blank">What Is Software Development? A Comprehensive Guide</a>
+                                                >What Is Software Development? A Comprehensive Guide</a>
                                         </h6>
                                     </div>
                                     <div class="blog__4__text">
@@ -673,7 +673,7 @@
                                     <div class="blog__4__button">
                                         <a class="default__button"
                                             href="what-is-software-development-a-comprehensive-guide"
-                                            target="_blank">READ MORE</a>
+                                        >READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -689,7 +689,7 @@
                                     </div>
                                     <div class="blog__4__heading">
                                         <h6><a href="What-is-application-development-a-detailed-guide-to-2025"
-                                                target="_blank">What is Application Development? A Detailed Guide to
+                                                >What is Application Development? A Detailed Guide to
                                                 2025</a></h6>
                                     </div>
                                     <div class="blog__4__text">
@@ -700,7 +700,7 @@
                                     <div class="blog__4__button">
                                         <a class="default__button"
                                             href="What-is-application-development-a-detailed-guide-to-2025"
-                                            target="_blank">READ MORE</a>
+                                            >READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -716,7 +716,7 @@
                                         <p class="bg__white"><span class="text__gradient">12 January, 2025</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="digital-marketing-and-advertising-company" target="_blank">Why
+                                        <h6><a href="digital-marketing-and-advertising-company">Why
                                                 Businesses Need a Digital Marketing Partner</a></h6>
                                     </div>
                                     <div class="blog__4__text">
@@ -725,7 +725,7 @@
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button" href="digital-marketing-and-advertising-company"
-                                            target="_blank">READ MORE</a>
+                                            >READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -739,7 +739,7 @@
                                         <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="Professional-Web-Development-Company" target="_blank">Expert Web
+                                        <h6><a href="Professional-Web-Development-Company">Expert Web
                                                 Development Company in USA</a></h6>
                                     </div>
                                     <div class="blog__4__text">
@@ -747,7 +747,7 @@
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button" href="Professional-Web-Development-Company"
-                                            target="_blank">READ MORE</a>
+                                            >READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -756,20 +756,19 @@
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/usa_company.png" alt="Digital_Marketing">
+                                        <img src="assets/img/blog/web-solution.png" alt="Digital_Marketing">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="web-development-solution" target="_blank">Expert Web
-                                                Development Company in USA</a></h6>
+                                        <h6><a href="web-development-solution">Web Development Solutions</a></h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Your business needs a unique USA web development company for success.</p>
+                                        <p>A web application development is one of our specialties so you are sure of fast, secured and scalable platforms for your businesses.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="web-development-solution" target="_blank">READ
+                                        <a class="default__button" href="web-development-solution">READ
                                             MORE</a>
                                     </div>
                                 </div>
