--- a/web-development-solution.html
+++ b/web-development-solution.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Web Development Solutions: Crafting High-Performance Websites for Business </title>
+    <title>Web Development Solutions: Crafting High-Performance Websites for Business | Digital Minds On </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -326,8 +326,7 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Web Development Solutions: Crafting High-Performance Websites for
-                                    Business</h2>
+                                <h2 class="heading">Web Development Solutions</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
